# evlib

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  HISTORY.md  README.md  REPORT.md  ROADMAP.md  TODO.md  WEBCAM_EVENT_DEMO_PLAN.md  analyze_model_structure.py  filtered_events.parquet  fix_instrument_attrs.py  fix_tracing_imports.sh  flake.nix  mkdocs.yml  publish.sh  pyproject.toml  pytest.ini  rvt_implementation_summary.md  test_rvt_simple.py  update_tracing.py  validate_rvt_actual_data.py
.github/actions/setup-dependencies/: action.yml
.github/rfcdds/: ARROW_IPC_DATALOADER_DESIGN.md
.github/scripts/: test-docs-ci.sh
.github/workflows/: build.yml  docs-ci.yml  docs.yml  gpu-tests.yml  publish.yml  pytest.yml  release.yml  rust.yml  tag.yml  test-docs.yml  validate-publish-setup.yml
benches/: BENCHMARKING.md  basic_performance.rs  benchmark_large_dataset.py  benchmark_memory.py  benchmark_performance_readme.py  benchmark_streaming_filtering.py  compare_performance.py  format_comparison.rs  memory_efficiency.rs  quick_performance_check.py  standalone_benchmark.rs  streaming_performance.rs
docs/: conftest.py  index.md  logging.md  python-logging.md
docs/api/: augmentation.md  core.md  filtering.md  formats.md  processing.md  representations.md  visualization.md
docs/development/: architecture.md  arrow-integration.md  contributing.md  duckdb-integration.md  releases.md  testing.md  zero-copy-architecture.md
docs/examples/: benchmarks.md  notebooks.md  polars-preprocessing.md  scripts.md
docs/getting-started/: installation.md  performance.md  quickstart.md
docs/user-guide/: augmentation.md  formats.md  loading-data.md  models.md  polars-preprocessing.md  prophesee-ecf.md  representations.md  visualization.md
examples/: README.md  basic_usage.py  benchmark.py  download_pretrained_models.py  e2vid_comprehensive_demo.ipynb  e2vid_video_reconstruction.ipynb  eda_etram_h5.ipynb  eda_gen4_h5.ipynb  eda_original_h5.ipynb  etap_real_tracking_example.py  etap_slider_depth_demo.ipynb  etap_tracking_example.py  etap_usage_example.py  etram_data_loading.py  event_augmentation.py  event_simulation_tutorial.ipynb  event_to_video_reconstruction.ipynb  event_transformations.py  event_viz.ipynb  events_viz_0.ipynb  events_viz_1.ipynb  evlib_showcase.py  evlib_unified_models.ipynb  evt21_example.py  example_rvt_replacement.py  filtering_demo.py  gstreamer_event_simulation_complete.py  gstreamer_integration_demo.ipynb  gstreamer_notebook_demo_statistics.txt  gstreamer_video_file_demo.py  gstreamer_webcam_demo.py  model_zoo_demo.py  polars_pytorch_simplified.py  pytorch_model_workflow.py  pytorch_to_onnx_converter.py  reader_examples.py  reader_showcase.py  real_time_streaming_demo.py  real_time_streaming_tutorial.ipynb  rvt_demo.py  (+23 more)
python/evlib/: __init__.py  ecf_integration_demo.py  etap_integration.py  filtering.py  hdf5_diagnostic.py  hdf5_prophesee.py  pytorch.py  representations.py  validation_demo.py  visualization.py
python/evlib/models/: __init__.py  base.py  config.py  e2vid.py  e2vid_plus.py  firenet.py  firenet_plus.py  rvt.py  rvt_backbone.py  rvt_layers.py  spade.py  ssl.py  utils.py
python/evlib/simulation/: __init__.py  config.py  esim.py
scripts/: convert_pytorch_to_onnx.py  convert_pytorch_to_onnx_enhanced.py  download_pretrained_models.sh  e2vid.py  esim_convert.py  publish.sh  rvt_inference.py  rvt_inference_evlib.py  test_docs.py  test_pytorch_loading.py  validate_benchmarks.py  visualize_etram.py
src/: lib.rs  tracing_config.rs
src/ev_augmentation/: config.rs  crop.rs  decimate.rs  drop_event.rs  geometric_transforms.rs  mod.rs  python.rs  spatial_jitter.rs  time_jitter.rs  time_reversal.rs  time_skew.rs  uniform_noise.rs
src/ev_core/: mod.rs  python.rs
src/ev_filtering/: config.rs  denoise.rs  downsampling.rs  drop_pixel.rs  hot_pixel.rs  mod.rs  polarity.rs  python.rs  spatial.rs  temporal.rs  utils.rs
src/ev_formats/: aedat_reader.rs  aer_reader.rs  arrow_builder.rs  dataframe_builder.rs  ecf_codec.rs  evt21_reader.rs  evt2_reader.rs  evt3_reader.rs  format_detector.rs  hdf5_reader.rs  mod.rs  polarity_handler.rs  prophesee_ecf_codec.rs  streaming.rs
src/ev_processing/: acceleration.rs  mod.rs  model_zoo.rs  streaming.rs
src/ev_processing/reconstruction/: convlstm.rs  e2vid.rs  e2vid_arch.rs  e2vid_plus.rs  e2vid_recurrent.rs  et_net.rs  gpu_utils.rs  hyper_e2vid.rs  metrics.rs  mod.rs  model_verification.rs  onnx_loader_simple.rs  python.rs  python_spade.rs  python_ssl.rs  python_temporal.rs  pytorch_bridge.rs  spade.rs  (+6 more)
src/ev_representations/: mod.rs  smooth_voxel_grid.rs
src/ev_simulation/: esim.rs  gstreamer_video.rs  mod.rs  noise_models.rs  python.rs  realtime_stream.rs  video_processing.rs
src/ev_tracking/: mod.rs
src/ev_visualization/: mod.rs  realtime.rs  terminal.rs  video_writer.rs  web_server.rs
static/: index.html
tests/: README_filtering_tests.md  conftest.py  smooth_voxel_test.rs  test_acceleration.py  test_aedat_address_decoding.rs  test_aer_formats_realdata.rs  test_arrow_integration.rs  test_augmentation_pandera.py  test_clean_loading.py  test_clean_output.py  test_data_formats.py  test_e2vid_architectures.rs  test_e2vid_benchmarks.py  test_e2vid_candle_architectures.py  test_e2vid_direct_api.py  test_e2vid_reconstruction.py  test_ecf_packed_coords.py  test_enhanced_voxel_grid.rs  test_ev_core.py  test_ev_filtering_pandera.py  test_event_validation.rs  test_evlib_exact_match.py  test_evlib_regression.py  test_evt2_detection.rs  test_evt2_formats_realdata.rs  test_evt3_comprehensive.py  test_evt3_format_support.py  test_evt3_formats.rs  test_evt3_working.py  test_evt_format_detection.rs  test_evt_integration.rs  test_filtering.py  test_filtering_real_data.py  test_format_detection.rs  test_gstreamer_integration.py  test_hdf5_formats_realdata.rs  test_hdf5_roundtrip.py  test_integration_candle_models.py  test_load_events_validation.py  test_memory_mapping.py  (+48 more)
tests/data/: test.txt
wasm/: Cargo.toml  stop-evlib-web.sh
wasm-evlib/: README.md  build.sh  index.html  serve.py
wasm-evlib/src/: lib.rs
(+3 files in other folders)
