[package]
name            = "evlib"
version         = "0.1.51"
authors         = ["Tarek Allam <t.allam.jr@gmail.com>"]
edition         = "2021"
description     = "High-performance event-camera utilities with Python bindings via PyO3"
readme          = "README.md"
license         = "MIT"
repository      = "https://github.com/tallamjr/evlib"
homepage        = "https://github.com/tallamjr/evlib"
documentation   = "https://docs.rs/evlib"
keywords        = ["event-camera", "vision", "rust", "python", "pyo3"]
categories      = ["science", "multimedia"]
exclude         = [
    "data/**/*",
    "dist/**/*",
    "examples/**/*",
    "python/**/*",
    "tests/**/*",
    "*.png",
    "*.mp4",
]

[lib]
name           = "evlib"
crate-type     = ["cdylib", "rlib"]

[[bin]]
name           = "evlib-terminal"
required-features = ["terminal", "gstreamer"]

[[bin]]
name           = "evlib-web"
required-features = ["gstreamer", "terminal"]

[dependencies]
# Python bindings
numpy          = "0.18.0"
pyo3           = { version = "0.18.3", features = ["extension-module"] }
pyo3-ffi       = "0.18.3"

# Core data processing
ndarray        = "0.15.6"
ndarray-rand   = "0.14.0"
rand           = "=0.8.5"
rand_distr     = "=0.4.3"
fastrand       = "2.0"

# Torch-style tensor ops (via Candle)
candle-core    = "0.9.1"
candle-nn      = "0.9.1"

# Optional PyTorch integration via tch-rs
tch            = { version = "0.16", optional = true }

# ONNX Runtime for model inference
ort            = { version = "2.0.0-rc.9", default-features = false, features = ["download-binaries", "copy-dylibs"] }

# I/O & utilities
memmap2        = "0.5"
image          = "0.24"
async-channel  = "1.6"
lazy_static    = "1.4"
hdf5           = "0.8.1"

# GStreamer for video processing
gstreamer      = { version = "0.22", optional = true }
gstreamer-app  = { version = "0.22", optional = true }
gstreamer-video = { version = "0.22", optional = true }

# HTTP client and async runtime for model downloading
reqwest        = { version = "0.11", features = ["blocking"] }
tokio          = { version = "1.35", features = ["full"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
num_cpus       = "1.16"

# WebSocket server
warp           = "0.3"
uuid           = { version = "1.6", features = ["v4", "serde"] }
dashmap        = "5.5"
futures        = "0.3"

# Terminal UI (optional)
ratatui        = { version = "0.28", optional = true }
crossterm      = { version = "0.28", optional = true }
clap           = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile       = "3.8"

[features]
default        = ["python"]
python         = []
cuda           = ["candle-core/cuda"]
metal          = ["candle-core/metal"]
gstreamer      = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
pytorch        = ["dep:tch"]
terminal       = ["dep:ratatui", "dep:crossterm", "dep:clap"]
