[package]
name            = "evlib"
version         = "0.2.8"
authors         = ["Tarek Allam <t.allam.jr@gmail.com>"]
edition         = "2021"
description     = "Event Camera Data Processing Library"
readme          = "README.md"
license         = "MIT"
repository      = "https://github.com/tallamjr/evlib"
homepage        = "https://github.com/tallamjr/evlib"
documentation   = "https://docs.rs/evlib"
keywords        = ["event-camera", "vision", "rust", "python", "pyo3"]
categories      = ["science", "multimedia"]
exclude         = [
    "data/**/*",
    "dist/**/*",
    "examples/**/*",
    "python/**/*",
    "tests/**/*",
    "*.png",
    "*.mp4",
]

[lib]
name           = "evlib"
crate-type     = ["cdylib", "rlib"]

# Binary targets (optional, only built when features are enabled)
[[bin]]
name           = "evlib-terminal"
path           = "src/bin/evlib-terminal.rs"
required-features = ["terminal", "gstreamer"]

[[bin]]
name           = "evlib-web"
path           = "src/bin/evlib-web.rs"
required-features = ["gstreamer", "terminal"]

[[bench]]
name = "memory_efficiency"
harness = false

[[bench]]
name = "streaming_performance"
harness = false

[[bench]]
name = "format_comparison"
harness = false

[[bench]]
name = "basic_performance"
harness = false

[[bench]]
name = "standalone_benchmark"
harness = false

[dependencies]
# Python bindings (optional)
numpy          = { version = "0.18.0", optional = true }
pyo3           = { version = "0.18.3", features = ["extension-module"], optional = true }
pyo3-ffi       = { version = "0.18.3", optional = true }

# Core data processing
ndarray        = "0.15.6"
ndarray-rand   = "0.14.0"
rand           = "=0.8.5"
rand_distr     = "=0.4.3"
fastrand       = "2.0"

# Torch-style tensor ops (via Candle)
candle-core    = "0.9.1"
candle-nn      = "0.9.1"

# Optional PyTorch integration via tch-rs
tch            = { version = "0.16", optional = true }

# ONNX Runtime for model inference
ort            = { version = "2.0.0-rc.9", default-features = false, features = ["download-binaries", "copy-dylibs"] }

# Polars for efficient event data processing (optional)
polars         = { version = "0.38.0", default-features = false, features = ["temporal", "dtype-u16", "dtype-i8", "lazy"], optional = true }

# I/O & utilities
memmap2        = "0.5"
image          = "0.24"
async-channel  = "1.6"
lazy_static    = "1.4"
hdf5-metno     = { version = "0.10.1", features = ["blosc-all"] }

# GStreamer for video processing
gstreamer      = { version = "0.22", optional = true }
gstreamer-app  = { version = "0.22", optional = true }
gstreamer-video = { version = "0.22", optional = true }

# HTTP client and async runtime for model downloading
reqwest        = { version = "0.11", features = ["blocking"] }
tokio          = { version = "1.35", features = ["full"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
num_cpus       = "1.16"

# WebSocket server
warp           = "0.3"
uuid           = { version = "1.6", features = ["v4", "serde"] }
dashmap        = "5.5"
futures        = "0.3"

# Terminal UI (optional)
ratatui        = { version = "0.28", optional = true }
crossterm      = { version = "0.28", optional = true }
clap           = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile       = "3.8"
criterion      = { version = "0.5", features = ["html_reports"] }

[features]
default        = ["polars"]
python         = ["dep:pyo3", "dep:pyo3-ffi", "dep:numpy"]
cuda           = ["candle-core/cuda"]
metal          = ["candle-core/metal"]
gstreamer      = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
pytorch        = ["dep:tch"]
polars         = ["dep:polars"]
terminal       = ["dep:ratatui", "dep:crossterm", "dep:clap"]
