[package]
name = "wasm-evlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Use only the core Event structure from evlib
# We'll copy just what we need to avoid heavy dependencies
fastrand = "2.0"

# Merge web-sys features into single dependency
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "Performance",
  "ImageData",
  "CanvasRenderingContext2d",
]}

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
strip = true     # Strip symbols
